--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,11 @@
   "name": "bolsaFamilia-v1.0",
   "app_id": "",
   "v2": true,
-  "typescript": true
+  "typescript": true,
+  "proxies": [
+    { 
+      "path": "/users",
+      "proxyUrl": "http://localhost:8080/users"
+    }
+  ]
 }
