--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
     "@ionic-native/barcode-scanner": "^3.4.4",
+    "@ionic-native/network": "^3.5.0",
     "@ionic/storage": "2.0.0",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
